--- a/StackOverflowSurvey2019.ipynb
+++ b/StackOverflowSurvey2019.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNH7uVLBjf30QXChxh2PD2q"
+      "authorship_tag": "ABX9TyNAxRPjfDNk+bsQdET4ZgQo"
     },
     "kernelspec": {
       "name": "python3",
@@ -54,24 +54,26 @@
       "source": [
         "# Checking the number of rows and columns in the two files\n",
         "\n",
-        "rows, cols = data_df.shape\n",
-        "print('Rows:', rows,'\\n', 'Columns:', cols)"
+        "d_rows, d_cols = data_df.shape\n",
+        "s_rows, s_cols = schema_df.shape\n",
+        "print('data_df has', d_rows, 'rows and', d_cols, 'columns.')\n",
+        "print('schema_df has', s_rows, 'rows and', s_cols, 'columns.')"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "wUWu4ZvyyJ3w",
-        "outputId": "a4b638b9-9672-471c-e60b-09399df7ecc9"
+        "outputId": "8c0f5bb9-2831-4ece-c577-2f94c7a4507d"
       },
-      "execution_count": 30,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Rows: 88883 \n",
-            " Columns: 85\n"
+            "data_df has 88883 rows and 85 columns.\n",
+            "schema_df has 85 rows and 2 columns.\n"
           ]
         }
       ]
@@ -845,18 +847,18 @@
     {
       "cell_type": "code",
       "source": [
-        "# Glancing at the schema of the survey data\n",
+        "# Glancing at the schema\n",
         "schema_df"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 423
+          "height": 424
         },
         "id": "zAHvGEajwkGz",
-        "outputId": "02d5cfde-7aab-40de-88f2-1812c317fa86"
+        "outputId": "ca49d784-ae04-4626-d072-ec6e81186a40"
       },
-      "execution_count": 22,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -879,7 +881,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-75271f04-b9e5-48c4-baad-c5ecbe2e54fc\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-cba36951-e164-4e6b-8a21-e45d2bd69086\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -965,7 +967,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-75271f04-b9e5-48c4-baad-c5ecbe2e54fc')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-cba36951-e164-4e6b-8a21-e45d2bd69086')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1017,12 +1019,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-75271f04-b9e5-48c4-baad-c5ecbe2e54fc button.colab-df-convert');\n",
+              "        document.querySelector('#df-cba36951-e164-4e6b-8a21-e45d2bd69086 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-75271f04-b9e5-48c4-baad-c5ecbe2e54fc');\n",
+              "        const element = document.querySelector('#df-cba36951-e164-4e6b-8a21-e45d2bd69086');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1042,8 +1044,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-9943ba0c-bd15-47fc-98b0-a6351cbf8e92\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-9943ba0c-bd15-47fc-98b0-a6351cbf8e92')\"\n",
+              "<div id=\"df-93796bb4-322e-4b56-b1aa-671f1fd9501f\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-93796bb4-322e-4b56-b1aa-671f1fd9501f')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1162,14 +1164,14 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-9943ba0c-bd15-47fc-98b0-a6351cbf8e92 button');\n",
+              "        document.querySelector('#df-93796bb4-322e-4b56-b1aa-671f1fd9501f button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
               "  </script>\n",
               "</div>\n",
               "\n",
-              "  <div id=\"id_22c119b8-f382-46b4-b819-075d687be0ab\">\n",
+              "  <div id=\"id_64b6ac23-8d27-4641-86bf-b5639f7ca49a\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -1213,7 +1215,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_22c119b8-f382-46b4-b819-075d687be0ab button.colab-df-generate');\n",
+              "        document.querySelector('#id_64b6ac23-8d27-4641-86bf-b5639f7ca49a button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -1234,7 +1236,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 22
+          "execution_count": 42
         }
       ]
     }
