--- a/StackOverflowSurvey2019.ipynb
+++ b/StackOverflowSurvey2019.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP5bZ9h40fui8vZAVmX4uLd"
+      "authorship_tag": "ABX9TyOXzKhxs07V5cHw27Lm51zN"
     },
     "kernelspec": {
       "name": "python3",
@@ -1959,7 +1959,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "It should be evident by now that the column 'QuestionText' in 'schema_df' has questions that describe what the columns of 'data_df' mean"
+        "It should be evident by now that the column 'QuestionText' in 'schema_df' has questions that describe what the columns of 'data_df' mean."
       ],
       "metadata": {
         "id": "l8mYSmDfJ6iJ"
