--- a/StackOverflowSurvey2019.ipynb
+++ b/StackOverflowSurvey2019.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMA2cPAxJMXqO/JW1IFLuMn",
+      "authorship_tag": "ABX9TyN1w+SX5D2IwP8zYbDRpdZq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1642,6 +1642,7 @@
       "cell_type": "code",
       "source": [
         "# Making all columns of 'data_df' visible in the output to glance at\n",
+        "\n",
         "pd.set_option('display.max_columns', d_cols)\n",
         "data_df.head(2)"
       ],
@@ -2941,7 +2942,8 @@
       "source": [
         "data_df.rename(columns = {'EdLevel' : 'HighestEdLevel', 'DevType' : 'YourDevType', 'YearsCode' : 'CodingExp',\n",
         "                          'Age1stCode' : 'CodingSinceAge', 'YearsCodePro' : 'ProCodingExp', 'ConvertedComp' : 'SalaryUSD',\n",
-        "                          'WorkRemote' : 'RemoteWorkFreq', 'ImpSyn' : 'SelfCompetenceLevel', 'SocialMedia' : 'MainSocialMedia'}, inplace = True)\n",
+        "                          'WorkRemote' : 'RemoteWorkFreq', 'ImpSyn' : 'SelfCompetenceLevel',\n",
+        "                          'SocialMedia' : 'MainSocialMedia'}, inplace = True)\n",
         "data_df.head(3)"
       ],
       "metadata": {
@@ -3603,6 +3605,8 @@
     {
       "cell_type": "code",
       "source": [
+        "# Check the no. of NaN/None vals in each column\n",
+        "\n",
         "data_df.isna().sum()"
       ],
       "metadata": {
