--- a/StackOverflowSurvey2019.ipynb
+++ b/StackOverflowSurvey2019.ipynb
@@ -4,7 +4,10 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN1w+SX5D2IwP8zYbDRpdZq",
+      "collapsed_sections": [
+        "ahfyxVVVDHCE"
+      ],
+      "authorship_tag": "ABX9TyMmupSpEEtd5RPnSDcaZ6wy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -87,7 +90,7 @@
       "metadata": {
         "id": "g-6zo9u1tyEg"
       },
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -105,15 +108,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wUWu4ZvyyJ3w",
-        "outputId": "24311dc2-5d61-4bba-adb3-91b65e60e0b5"
+        "outputId": "f945cd45-ff31-46c1-8f43-ff66528031cc"
       },
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "data_df has 88883 rows and 85 columns.\n",
+            "data_df has 31680 rows and 85 columns.\n",
             "schema_df has 85 rows and 2 columns.\n"
           ]
         }
@@ -924,7 +927,7 @@
       "metadata": {
         "id": "jtyheghwJH5x"
       },
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -1652,9 +1655,9 @@
           "height": 406
         },
         "id": "wWOn3IRPJ6O_",
-        "outputId": "aef38d2d-6d86-4fbe-db19-dfc979950add"
+        "outputId": "15ad5019-66db-4cfc-838a-eacf3977d58f"
       },
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1832,7 +1835,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-4ebacd0e-dd32-42e1-93bd-1f7449a5cf4a\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-0c6ade89-4809-49dd-bea6-fadece2c6dcd\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -2205,7 +2208,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4ebacd0e-dd32-42e1-93bd-1f7449a5cf4a')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0c6ade89-4809-49dd-bea6-fadece2c6dcd')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -2257,12 +2260,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-4ebacd0e-dd32-42e1-93bd-1f7449a5cf4a button.colab-df-convert');\n",
+              "        document.querySelector('#df-0c6ade89-4809-49dd-bea6-fadece2c6dcd button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-4ebacd0e-dd32-42e1-93bd-1f7449a5cf4a');\n",
+              "        const element = document.querySelector('#df-0c6ade89-4809-49dd-bea6-fadece2c6dcd');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -2282,8 +2285,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-3b80c6b9-97cb-4f84-9cf1-e0c920a09825\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-3b80c6b9-97cb-4f84-9cf1-e0c920a09825')\"\n",
+              "<div id=\"df-55b6c4fa-d981-4c87-a39c-8b537d55b731\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-55b6c4fa-d981-4c87-a39c-8b537d55b731')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -2402,7 +2405,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-3b80c6b9-97cb-4f84-9cf1-e0c920a09825 button');\n",
+              "        document.querySelector('#df-55b6c4fa-d981-4c87-a39c-8b537d55b731 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -2418,7 +2421,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 7
         }
       ]
     },
@@ -2450,7 +2453,7 @@
       "metadata": {
         "id": "M7Mhz2OBNTQo"
       },
-      "execution_count": 13,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -2468,9 +2471,9 @@
           "height": 285
         },
         "id": "nbYj2xiKLYEn",
-        "outputId": "189b4eae-29ff-4997-f335-294ef4525716"
+        "outputId": "43a20784-0d5a-438c-8b2b-96863de9668d"
       },
-      "execution_count": 15,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2533,7 +2536,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-a1f2ce23-bad0-432c-a24f-27cf2439ff7a\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-6b80f2b2-40fe-4fd4-bd19-a7ec40d6c7ab\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -2670,7 +2673,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a1f2ce23-bad0-432c-a24f-27cf2439ff7a')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6b80f2b2-40fe-4fd4-bd19-a7ec40d6c7ab')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -2722,12 +2725,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-a1f2ce23-bad0-432c-a24f-27cf2439ff7a button.colab-df-convert');\n",
+              "        document.querySelector('#df-6b80f2b2-40fe-4fd4-bd19-a7ec40d6c7ab button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-a1f2ce23-bad0-432c-a24f-27cf2439ff7a');\n",
+              "        const element = document.querySelector('#df-6b80f2b2-40fe-4fd4-bd19-a7ec40d6c7ab');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -2747,8 +2750,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-c712d9d4-7da7-4067-8c5e-1ea72cce7bc0\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-c712d9d4-7da7-4067-8c5e-1ea72cce7bc0')\"\n",
+              "<div id=\"df-a510c68e-1551-40e3-bd8f-998b6596f95d\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-a510c68e-1551-40e3-bd8f-998b6596f95d')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -2867,7 +2870,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-c712d9d4-7da7-4067-8c5e-1ea72cce7bc0 button');\n",
+              "        document.querySelector('#df-a510c68e-1551-40e3-bd8f-998b6596f95d button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -2883,14 +2886,14 @@
             }
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 9
         }
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Now, let us get a bit more clarity on what the column names imply:"
+        "Now, let us get a bit more clarity on what the column names imply. For that, we need to look up the column names' description in 'schema_df' frame."
       ],
       "metadata": {
         "id": "KDeb_stDOL_g"
@@ -2908,9 +2911,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OOw-pWTIOn14",
-        "outputId": "94333c80-df82-4bdb-e5ed-035e5657e4cb"
+        "outputId": "50439c08-03f0-49cd-923d-a5b7e004b178"
       },
-      "execution_count": 16,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -2952,9 +2955,9 @@
           "height": 386
         },
         "id": "9TvC9DoaRMOw",
-        "outputId": "81d85588-a6f0-40bb-87bb-bf18d831cefb"
+        "outputId": "334e1b71-55a0-41e4-88c8-eb6f0d02184e"
       },
-      "execution_count": 17,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3040,7 +3043,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-bb0cb499-671d-4e50-b0c9-3e3a1c2cbd96\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-ed1c5e05-35fb-4d5f-b907-733cdc4de3a8\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -3205,7 +3208,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-bb0cb499-671d-4e50-b0c9-3e3a1c2cbd96')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ed1c5e05-35fb-4d5f-b907-733cdc4de3a8')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -3257,12 +3260,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-bb0cb499-671d-4e50-b0c9-3e3a1c2cbd96 button.colab-df-convert');\n",
+              "        document.querySelector('#df-ed1c5e05-35fb-4d5f-b907-733cdc4de3a8 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-bb0cb499-671d-4e50-b0c9-3e3a1c2cbd96');\n",
+              "        const element = document.querySelector('#df-ed1c5e05-35fb-4d5f-b907-733cdc4de3a8');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -3282,8 +3285,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-976dbb5d-3c01-4fad-a00f-809f102676ab\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-976dbb5d-3c01-4fad-a00f-809f102676ab')\"\n",
+              "<div id=\"df-4a5a6375-dbd8-456e-afac-2c1fbcc71f18\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-4a5a6375-dbd8-456e-afac-2c1fbcc71f18')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -3402,7 +3405,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-976dbb5d-3c01-4fad-a00f-809f102676ab button');\n",
+              "        document.querySelector('#df-4a5a6375-dbd8-456e-afac-2c1fbcc71f18 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -3418,7 +3421,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 11
         }
       ]
     },
