--- a/StackOverflowSurvey2019.ipynb
+++ b/StackOverflowSurvey2019.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP2aOobU+4D5oaUo58q8S1B",
+      "authorship_tag": "ABX9TyMQXc8Jff7yofVwX8a7/rBt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -130,7 +130,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 603
+          "height": 602
         },
         "id": "9bliazHyum4J",
         "outputId": "85bf726b-e910-410d-db3c-ab79dd6b0673"
@@ -1633,7 +1633,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "It should be evident by now that the column 'QuestionText' in 'schema_df' has questions that describe what the columns of 'data_df' mean."
+        "**It should be evident by now that the column** 'QuestionText' **in frame** 'schema_df' **has questions that describe what the columns of dataset frame** 'data_df' **mean.**"
       ],
       "metadata": {
         "id": "l8mYSmDfJ6iJ"
@@ -1650,7 +1650,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 407
+          "height": 406
         },
         "id": "wWOn3IRPJ6O_",
         "outputId": "e3eec2c2-c737-4e35-8723-78c15be8f4bf"
@@ -2426,7 +2426,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "After going through all the columns in above o/p, we drop columns that are irrelevant to our analysis."
+        "**After going through all the columns in above o/p, we drop columns that are irrelevant to our analysis.**"
       ],
       "metadata": {
         "id": "VcvlnW9eOpuJ"
@@ -2451,7 +2451,7 @@
       "metadata": {
         "id": "M7Mhz2OBNTQo"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2882,7 +2882,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Now, let us get a bit more clarity on what the column names imply. For that, we need to look up the column names' description in 'schema_df' frame."
+        "**Now, let us get a bit more clarity on what the column names imply. For that, we need to look up the column names' description in frame** 'schema_df'."
       ],
       "metadata": {
         "id": "KDeb_stDOL_g"
@@ -2923,7 +2923,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Make some of the column names more contextual."
+        "**Altering some column names to make the context more obvious.**"
       ],
       "metadata": {
         "id": "8GOMehwlQ_ZE"
@@ -3459,7 +3459,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Above output indicates a lot of columns have significant number of NaN values. Dropping all those NaN values at one go would greatly affect out analysis later on. So, we'll transform the values one column at a time."
+        "**Above output indicates a lot of columns have significant number of** NaN **values. Dropping all those** NaN **values at one go would greatly affect out analysis later on. So, we'll transform the values one column at a time.**"
       ],
       "metadata": {
         "id": "Hplxihg71PQ6"
@@ -3468,7 +3468,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# identifying unique values in column 'MainBranch'\n",
+        "# Identifying unique values in column 'MainBranch'\n",
         "\n",
         "data_df['MainBranch'].unique()"
       ],
@@ -3500,7 +3500,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# altering the values in 'MainBranch'\n",
+        "# Altering the values in 'MainBranch'\n",
         "\n",
         "data_df['MainBranch'] = data_df['MainBranch'].replace({'I am a student who is learning to code' : 'Student',\n",
         "                               'I am not primarily a developer, but I write code sometimes as part of my work' : 'Amateur',\n",
@@ -3532,9 +3532,18 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Repeating above step for other columns henceforth:**"
+      ],
+      "metadata": {
+        "id": "HMdQ15SbStsT"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "# column 'HighestEdLevel'\n",
+        "# Column 'HighestEdLevel'\n",
         "\n",
         "data_df['HighestEdLevel'].unique()"
       ],
@@ -3607,7 +3616,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# column 'CodingExp'\n",
+        "# Column 'CodingExp'\n",
         "\n",
         "data_df['CodingExp'].unique()"
       ],
@@ -3640,8 +3649,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# above output indicates all values in col 'CodingExp' are strings which can't be processed by aggregate functions during analysis\n",
-        "# so these values should be replaced suitably and then the column's dtype changed to float\n",
+        "# above o/p shows all vals in col 'CodingExp' are strings which can't be processed by aggregate functions during analysis\n",
+        "# so these values should be replaced suitably and then the column's dtype changed to float.\n",
         "\n",
         "data_df['CodingExp'] = data_df['CodingExp'].replace({'Less than 1 year' : 0, 'More than 50 years' : 51, np.NaN : 0})\n",
         "data_df['CodingExp'] = data_df['CodingExp'].astype(float)\n",
@@ -3708,9 +3717,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# above output indicates all values in col 'CodingSinceAge' are strings which can't be processed by aggregate functions during analysis\n",
-        "# so these values should be replaced suitably and then the column's dtype changed to float\n",
-        "\n",
         "data_df['CodingSinceAge'] = data_df['CodingSinceAge'].replace({'Younger than 5 years' : 4, 'Older than 85' : 86, np.NaN : 0})\n",
         "data_df['CodingSinceAge'] = data_df['CodingSinceAge'].astype(float)\n",
         "data_df['CodingSinceAge'].unique() # checking if the changes have effected"
@@ -3744,6 +3750,8 @@
     {
       "cell_type": "code",
       "source": [
+        "# Column 'ProCodingExp'\n",
+        "\n",
         "data_df['ProCodingExp'].unique()"
       ],
       "metadata": {
@@ -3775,9 +3783,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# as above, all vals in col 'ProCodingExp' are strings which can't be processed by aggregate functions during analysis\n",
-        "# so these values should be replaced suitably and then the column's dtype changed to float\n",
-        "\n",
         "data_df['ProCodingExp'] = data_df['ProCodingExp'].replace({'Less than 1 year' : 0, 'More than 50 years' : 51, np.NaN : 0})\n",
         "data_df['ProCodingExp'] = data_df['ProCodingExp'].astype(float)\n",
         "data_df['ProCodingExp'].unique() # checking if the changes have effected"
@@ -3809,7 +3814,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# Quantifying the col 'SelfCompetenceLevel' on scale 0-10\n",
+        "# Quantifying the col 'SelfCompetenceLevel' on scale 0-10, 5 being average.\n",
+        "\n",
         "data_df['SelfCompetenceLevel'].unique()"
       ],
       "metadata": {
@@ -3869,7 +3875,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# identifying and then replacing non-English characters from col 'MainSocialMedia'\n",
+        "# Identifying and then replacing non-English characters from column 'MainSocialMedia'\n",
+        "\n",
         "data_df['MainSocialMedia'].unique()"
       ],
       "metadata": {
@@ -3984,7 +3991,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# Altering the 'Employment' column\n",
+        "# Altering the 'Employment' column's data\n",
+        "\n",
         "data_df['Employment'].unique()"
       ],
       "metadata": {
@@ -4045,7 +4053,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Let us identify rows that have significant count of NaN (say, 10+) across the columns."
+        "**Dropping rows having significant** NaN **values.**\n",
+        "<p>Let us identify rows that have significant count of NaN (say, 10+) across the columns.</p>"
       ],
       "metadata": {
         "id": "Qr3rPg7wWvH-"
@@ -4062,7 +4071,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 490
+          "height": 489
         },
         "id": "V7aM4zVPTuli",
         "outputId": "9ea2b1e5-3a7b-42ae-cfb1-8ebcb7f714ac"
@@ -4172,7 +4181,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# Fetching rows having NaN in 10+ columns out of 22 cols (i.e. more than 45% of the columns have no data in a row)\n",
+        "# Fetching rows having NaN in 10+ columns out of all cols (i.e. more than 45% of the columns have no data in a row)\n",
+        "\n",
         "data_df[nan_count_per_row > 10]"
       ],
       "metadata": {
@@ -4923,12 +4933,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 892
+          "height": 891
         },
         "id": "hUZUuYI7Tuq2",
-        "outputId": "70abafa2-4e28-41f4-d438-4eb8ff746888"
+        "outputId": "31b999ab-9449-495d-f82d-8e7aa96052c7"
       },
-      "execution_count": 55,
+      "execution_count": 73,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5120,7 +5130,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-8a7e7b41-39a4-40fe-b6f0-e676e761782e\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-50c711dc-fff1-4ca0-8745-9f9ee2bc7149\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -5497,7 +5507,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8a7e7b41-39a4-40fe-b6f0-e676e761782e')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-50c711dc-fff1-4ca0-8745-9f9ee2bc7149')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -5549,12 +5559,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-8a7e7b41-39a4-40fe-b6f0-e676e761782e button.colab-df-convert');\n",
+              "        document.querySelector('#df-50c711dc-fff1-4ca0-8745-9f9ee2bc7149 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-8a7e7b41-39a4-40fe-b6f0-e676e761782e');\n",
+              "        const element = document.querySelector('#df-50c711dc-fff1-4ca0-8745-9f9ee2bc7149');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -5574,8 +5584,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-33b00c16-fe3d-42d4-ad6c-e0c719d45cfc\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-33b00c16-fe3d-42d4-ad6c-e0c719d45cfc')\"\n",
+              "<div id=\"df-73a200fa-2638-4788-983e-334f9860ff18\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-73a200fa-2638-4788-983e-334f9860ff18')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -5694,14 +5704,14 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-33b00c16-fe3d-42d4-ad6c-e0c719d45cfc button');\n",
+              "        document.querySelector('#df-73a200fa-2638-4788-983e-334f9860ff18 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
               "  </script>\n",
               "</div>\n",
               "\n",
-              "  <div id=\"id_c7290c66-8e54-4765-bc27-bff49a656c64\">\n",
+              "  <div id=\"id_dc9dd17c-785d-4405-b3f6-c0f87d96ff8b\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -5745,7 +5755,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_c7290c66-8e54-4765-bc27-bff49a656c64 button.colab-df-generate');\n",
+              "        document.querySelector('#id_dc9dd17c-785d-4405-b3f6-c0f87d96ff8b button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -5765,17 +5775,40 @@
             }
           },
           "metadata": {},
-          "execution_count": 55
+          "execution_count": 73
         }
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "So, we now have the dataset as clean as possible."
+        "**So, we now have the dataset as clean as possible. We'll save a copy of it for data analysis:**"
       ],
       "metadata": {
         "id": "x72k-nLN5kzx"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data_df.to_csv('/content/sofsurvey2019_cleaned.csv')"
+      ],
+      "metadata": {
+        "id": "d8YSxDNGUMxv"
+      },
+      "execution_count": 70,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "---\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "SH9KFqdTWISB"
       }
     },
     {
