--- a/StackOverflowSurvey2019.ipynb
+++ b/StackOverflowSurvey2019.ipynb
@@ -8,7 +8,7 @@
         "ahfyxVVVDHCE",
         "IEwqPxpCCxDp"
       ],
-      "authorship_tag": "ABX9TyOW455uXYFrnTzdLE6PlAqm",
+      "authorship_tag": "ABX9TyOKCWTYULn2WVqbDd/53T6H",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -8902,7 +8902,7 @@
         "cgc = cntry_grp['CodingExp'].mean().round(0)\n",
         "cgs = cntry_grp['SalaryUSD'].mean().round(2)\n",
         "\n",
-        "ans = pd.concat([cgc, cgs], axis = 1).sort_values(by = 'CodingExp', ascending = False)\n",
+        "ans = pd.concat([cgc, cgs], axis = 1)\n",
         "ans.loc[fltr].sort_values(by = ['CodingExp', 'SalaryUSD'], ascending = False)"
       ],
       "metadata": {
@@ -8911,9 +8911,9 @@
           "height": 237
         },
         "id": "ReaV9B6MxLnK",
-        "outputId": "08406767-6d7b-4b46-9fdb-8f85dcde535d"
+        "outputId": "1cc042cb-76a2-40dd-cd78-21dd83e7e7ee"
       },
-      "execution_count": 205,
+      "execution_count": 209,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8929,7 +8929,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-4819dd36-3793-4cea-b9af-68413efb6ca5\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-6cbb2975-4dc6-4b50-859b-2954ebb983f6\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -8989,7 +8989,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4819dd36-3793-4cea-b9af-68413efb6ca5')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6cbb2975-4dc6-4b50-859b-2954ebb983f6')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -9041,12 +9041,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-4819dd36-3793-4cea-b9af-68413efb6ca5 button.colab-df-convert');\n",
+              "        document.querySelector('#df-6cbb2975-4dc6-4b50-859b-2954ebb983f6 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-4819dd36-3793-4cea-b9af-68413efb6ca5');\n",
+              "        const element = document.querySelector('#df-6cbb2975-4dc6-4b50-859b-2954ebb983f6');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -9066,8 +9066,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-f1461d54-6a63-48f9-99c4-901bbf6d8a71\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-f1461d54-6a63-48f9-99c4-901bbf6d8a71')\"\n",
+              "<div id=\"df-8e010507-a55e-4812-9614-42da50544a90\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-8e010507-a55e-4812-9614-42da50544a90')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -9186,7 +9186,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-f1461d54-6a63-48f9-99c4-901bbf6d8a71 button');\n",
+              "        document.querySelector('#df-8e010507-a55e-4812-9614-42da50544a90 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -9202,7 +9202,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 205
+          "execution_count": 209
         }
       ]
     },
