--- a/StackOverflowSurvey2019.ipynb
+++ b/StackOverflowSurvey2019.ipynb
@@ -8,7 +8,7 @@
         "ahfyxVVVDHCE",
         "IEwqPxpCCxDp"
       ],
-      "authorship_tag": "ABX9TyOKCWTYULn2WVqbDd/53T6H",
+      "authorship_tag": "ABX9TyPPjO9HR40zatUY6GRKxLC2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -8903,7 +8903,7 @@
         "cgs = cntry_grp['SalaryUSD'].mean().round(2)\n",
         "\n",
         "ans = pd.concat([cgc, cgs], axis = 1)\n",
-        "ans.loc[fltr].sort_values(by = ['CodingExp', 'SalaryUSD'], ascending = False)"
+        "ans.loc[fltr].sort_values(by = ['CodingExp', 'SalaryUSD'], ascending = [False, True])"
       ],
       "metadata": {
         "colab": {
@@ -8911,9 +8911,9 @@
           "height": 237
         },
         "id": "ReaV9B6MxLnK",
-        "outputId": "1cc042cb-76a2-40dd-cd78-21dd83e7e7ee"
+        "outputId": "d0df6599-02d9-499d-8826-711545d11916"
       },
-      "execution_count": 209,
+      "execution_count": 210,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8923,13 +8923,13 @@
               "Country                             \n",
               "United Kingdom       15.0  166182.50\n",
               "United States        14.0  249552.57\n",
-              "Canada               13.0  134018.56\n",
               "Germany              13.0  109256.88\n",
+              "Canada               13.0  134018.56\n",
               "India                 6.0   28057.66"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-6cbb2975-4dc6-4b50-859b-2954ebb983f6\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-bd0e9a86-39cb-4fa5-83e1-035b425aa753\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -8969,14 +8969,14 @@
               "      <td>249552.57</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>Canada</th>\n",
-              "      <td>13.0</td>\n",
-              "      <td>134018.56</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
               "      <th>Germany</th>\n",
               "      <td>13.0</td>\n",
               "      <td>109256.88</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Canada</th>\n",
+              "      <td>13.0</td>\n",
+              "      <td>134018.56</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>India</th>\n",
@@ -8989,7 +8989,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6cbb2975-4dc6-4b50-859b-2954ebb983f6')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-bd0e9a86-39cb-4fa5-83e1-035b425aa753')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -9041,12 +9041,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-6cbb2975-4dc6-4b50-859b-2954ebb983f6 button.colab-df-convert');\n",
+              "        document.querySelector('#df-bd0e9a86-39cb-4fa5-83e1-035b425aa753 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-6cbb2975-4dc6-4b50-859b-2954ebb983f6');\n",
+              "        const element = document.querySelector('#df-bd0e9a86-39cb-4fa5-83e1-035b425aa753');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -9066,8 +9066,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-8e010507-a55e-4812-9614-42da50544a90\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-8e010507-a55e-4812-9614-42da50544a90')\"\n",
+              "<div id=\"df-2f193e4c-8b99-4e62-bd4f-315ff4e9dd08\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-2f193e4c-8b99-4e62-bd4f-315ff4e9dd08')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -9186,7 +9186,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-8e010507-a55e-4812-9614-42da50544a90 button');\n",
+              "        document.querySelector('#df-2f193e4c-8b99-4e62-bd4f-315ff4e9dd08 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -9198,11 +9198,11 @@
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "dataframe",
-              "summary": "{\n  \"name\": \"ans\",\n  \"rows\": 5,\n  \"fields\": [\n    {\n      \"column\": \"Country\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 5,\n        \"samples\": [\n          \"United States\",\n          \"India\",\n          \"Canada\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"CodingExp\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 3.5637059362410923,\n        \"min\": 6.0,\n        \"max\": 15.0,\n        \"num_unique_values\": 4,\n        \"samples\": [\n          14.0,\n          6.0,\n          15.0\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"SalaryUSD\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 80879.30358087401,\n        \"min\": 28057.66,\n        \"max\": 249552.57,\n        \"num_unique_values\": 5,\n        \"samples\": [\n          249552.57,\n          28057.66,\n          134018.56\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
+              "summary": "{\n  \"name\": \"ans\",\n  \"rows\": 5,\n  \"fields\": [\n    {\n      \"column\": \"Country\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 5,\n        \"samples\": [\n          \"United States\",\n          \"India\",\n          \"Germany\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"CodingExp\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 3.5637059362410923,\n        \"min\": 6.0,\n        \"max\": 15.0,\n        \"num_unique_values\": 4,\n        \"samples\": [\n          14.0,\n          6.0,\n          15.0\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"SalaryUSD\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 80879.30358087401,\n        \"min\": 28057.66,\n        \"max\": 249552.57,\n        \"num_unique_values\": 5,\n        \"samples\": [\n          249552.57,\n          28057.66,\n          109256.88\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
             }
           },
           "metadata": {},
-          "execution_count": 209
+          "execution_count": 210
         }
       ]
     },
