--- a/StackOverflowSurvey2019.ipynb
+++ b/StackOverflowSurvey2019.ipynb
@@ -8,7 +8,7 @@
         "ahfyxVVVDHCE",
         "IEwqPxpCCxDp"
       ],
-      "authorship_tag": "ABX9TyNRG61C6thElRs+zwNnYBTm",
+      "authorship_tag": "ABX9TyMSbz0L/pc2CGy1ACK132d1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -7629,7 +7629,7 @@
       "cell_type": "code",
       "source": [
         "fil = df['Country'] == 'India'\n",
-        "df.loc[fil, 'MainSocialMedia'].value_counts(normalize = True, )"
+        "df.loc[fil, 'MainSocialMedia'].value_counts(normalize = True, )  # setting 'normalize = True' returns % composition"
       ],
       "metadata": {
         "colab": {
@@ -7767,6 +7767,8 @@
     {
       "cell_type": "code",
       "source": [
+        "# Using value_counts()\n",
+        "\n",
         "hobby = df['Hobbyist'].value_counts().get('Yes', 0)   # O/P: array(['Yes', 'No'], dtype=object)\n",
         "# df.shape  # (88352, 24)\n",
         "print(round(hobby / df.shape[0] * 100, 2), '% identify as hobbyists.')"
@@ -7779,6 +7781,58 @@
         "outputId": "0b8ce59d-cfa4-47c0-dc13-5f1f87a9d80a"
       },
       "execution_count": 117,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "80.32 % identify as hobbyists.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Using boolean checking & sum\n",
+        "\n",
+        "hobby = (df['Hobbyist'] == 'Yes').sum()\n",
+        "print(round(hobby / df.shape[0] * 100, 2), '% identify as hobbyists.')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MlyCjEffyl47",
+        "outputId": "9e32857e-9cc6-48bb-8e77-6739be739a0f"
+      },
+      "execution_count": 121,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "80.32 % identify as hobbyists.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Using .loc for explicit filtering\n",
+        "\n",
+        "hobby = df.loc[df['Hobbyist'] == 'Yes'].shape[0]\n",
+        "print(round(hobby / df.shape[0] * 100, 2), '% identify as hobbyists.')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "j6tF09OUzKW6",
+        "outputId": "877550d7-68a0-4185-9b08-f576f24c86f9"
+      },
+      "execution_count": 124,
       "outputs": [
         {
           "output_type": "stream",
