--- a/StackOverflowSurvey2019.ipynb
+++ b/StackOverflowSurvey2019.ipynb
@@ -8,7 +8,7 @@
         "ahfyxVVVDHCE",
         "IEwqPxpCCxDp"
       ],
-      "authorship_tag": "ABX9TyNxfvobLSlHpe0bDbtnDUb4",
+      "authorship_tag": "ABX9TyPx9bboAY27aETZIZ+ofcvG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -10065,10 +10065,7 @@
         "# Applying prev created filter 'cntry' to above o/p\n",
         "\n",
         "tmp = df.groupby(['Country', 'MainBranch']).agg({'CodingSinceAge' : 'mean'}).round(2)\n",
-        "tmp.loc[cntry]\n",
-        "\n",
-        "# tmp.reset_index(inplace = True)\n",
-        "# tmp\n"
+        "tmp.loc[cntry]"
       ],
       "metadata": {
         "colab": {
@@ -10076,9 +10073,9 @@
           "height": 864
         },
         "id": "2n-UEZ--teHH",
-        "outputId": "ce18e7d9-0dd6-4d28-8dba-c613e6c02e61"
+        "outputId": "fddea7c0-68a8-4a73-fca3-d20a9c897f34"
       },
-      "execution_count": 23,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -10114,7 +10111,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-269feb0f-fd3f-4727-a006-3c2d06889c2a\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-38869a0d-6cb8-4572-af93-77218561024d\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -10254,7 +10251,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-269feb0f-fd3f-4727-a006-3c2d06889c2a')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-38869a0d-6cb8-4572-af93-77218561024d')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -10306,12 +10303,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-269feb0f-fd3f-4727-a006-3c2d06889c2a button.colab-df-convert');\n",
+              "        document.querySelector('#df-38869a0d-6cb8-4572-af93-77218561024d button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-269feb0f-fd3f-4727-a006-3c2d06889c2a');\n",
+              "        const element = document.querySelector('#df-38869a0d-6cb8-4572-af93-77218561024d');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -10331,8 +10328,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-28c724c0-dc38-4e76-b41d-66c0d202eebd\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-28c724c0-dc38-4e76-b41d-66c0d202eebd')\"\n",
+              "<div id=\"df-6b26fd7c-3086-40dc-940d-1fd6efbe8ba3\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-6b26fd7c-3086-40dc-940d-1fd6efbe8ba3')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -10451,7 +10448,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-28c724c0-dc38-4e76-b41d-66c0d202eebd button');\n",
+              "        document.querySelector('#df-6b26fd7c-3086-40dc-940d-1fd6efbe8ba3 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -10463,11 +10460,11 @@
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "dataframe",
-              "summary": "{\n  \"name\": \"# tmp\",\n  \"rows\": 25,\n  \"fields\": [\n    {\n      \"column\": \"CodingSinceAge\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 1.2007188124896966,\n        \"min\": 12.05,\n        \"max\": 17.21,\n        \"num_unique_values\": 24,\n        \"samples\": [\n          16.92,\n          14.12,\n          16.0\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
+              "summary": "{\n  \"name\": \"tmp\",\n  \"rows\": 25,\n  \"fields\": [\n    {\n      \"column\": \"CodingSinceAge\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 1.2007188124896966,\n        \"min\": 12.05,\n        \"max\": 17.21,\n        \"num_unique_values\": 24,\n        \"samples\": [\n          16.92,\n          14.12,\n          16.0\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
             }
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 24
         }
       ]
     },
