--- a/StackOverflowSurvey2019.ipynb
+++ b/StackOverflowSurvey2019.ipynb
@@ -7,18 +7,9 @@
       "collapsed_sections": [
         "ahfyxVVVDHCE",
         "IEwqPxpCCxDp",
-        "RCwnWqmsxUIw",
-        "Txeem6PsuHm6",
-        "FTSGPLoykS0s",
-        "PSbskrLBPNSu",
-        "9mf5o8foSdEX",
-        "isqwUIpolmCg",
-        "NpuqpkfwVP2K",
-        "ncd553eXnlhV",
-        "x_XswvejYYAv",
-        "jGPRRpI69PrL"
+        "JMbfhvzq5qdz"
       ],
-      "authorship_tag": "ABX9TyPfJ3uYg0Su4MCyoQ0RtV1l",
+      "authorship_tag": "ABX9TyOipN1PyIjNW6z7DYTMkRi+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -12831,15 +12822,24 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**We can plot a bar chart for above o/p:**"
+      ],
+      "metadata": {
+        "id": "YSsVnmQrjU2j"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "res = df.pivot_table(index = 'Country', columns = 'HighestEdLevel', values = 'CodingExp', aggfunc = 'median').sort_values(by = 'Country').head(5)\n",
-        "res.plot(kind='bar', figsize=(10, 5))\n",
+        "result = df.pivot_table(index = 'Country', columns = 'HighestEdLevel', values = 'CodingExp', aggfunc = 'median').sort_values(by = 'Country').head(5)\n",
+        "result.plot(kind='bar', figsize=(10, 5))\n",
         "plt.title('Median coding exp across edn levels by country')\n",
-        "plt.ylabel('CodingExp')\n",
-        "plt.xlabel('Country')\n",
-        "plt.legend(title='Education Level')\n",
-        "plt.show()"
+        "plt.xlabel('Country')  # label of x-axis\n",
+        "plt.ylabel('CodingExp') # label of y-axis\n",
+        "plt.legend(title='Education Levels')\n",
+        "plt.show() # render the chart"
       ],
       "metadata": {
         "colab": {
